// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeincrementIcon /> renders 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 8l-8 8-8-8"
        stroke="#fff"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`<IncrementIcon /> renders 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <svg
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 0a1.5 1.5 0 00-1.5 1.5v9h-9a1.5 1.5 0 000 3h9v9a1.5 1.5 0 003 0v-9h9a1.5 1.5 0 000-3h-9v-9A1.5 1.5 0 0012 0z"
        fill="#fff"
      />
    </svg>
  </div>
</div>
`;
